konst/tests/misc_tests/collect_const_ui_tests/collect_const_misc_0_err.stderr
error[E0308]: mismatched types
 --> tests/misc_tests/collect_const_ui_tests/collect_const_misc_0_err.rs:1:21
  |
1 |   const _: [u8; 10] = {
  |  _____________________^
2 | |     konst::iter::collect_const!{usize => 0usize..10};
3 | | };
  | |_^ expected `[u8; 10]`, found `()`

error[E0308]: mismatched types
 --> tests/misc_tests/collect_const_ui_tests/collect_const_misc_0_err.rs:6:5
  |
6 |     konst::iter::collect_const!{u8 => 0usize..10};
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     expected `[u8; CAP_KO9Y329U2U]`, found `[usize; CAP_KO9Y329U2U]`
  |     arguments to this method are incorrect
  |
  = note: expected array `[u8; CAP_KO9Y329U2U]`
             found array `[usize; CAP_KO9Y329U2U]`
note: method defined here
 --> $CARGO/typewit-1.9.0/src/type_eq.rs
  |
  |     pub const fn to_right(self, from: L) -> R {
  |                  ^^^^^^^^
  = note: this error originates in the macro `$crate::__collect_const_iter_with` which comes from the expansion of the macro `konst::iter::collect_const` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/misc_tests/collect_const_ui_tests/collect_const_misc_0_err.rs:5:21
  |
5 |   const _: [u8; 10] = {
  |  _____________________^
6 | |     konst::iter::collect_const!{u8 => 0usize..10};
7 | | };
  | |_^ expected `[u8; 10]`, found `()`

error[E0308]: mismatched types
  --> tests/misc_tests/collect_const_ui_tests/collect_const_misc_0_err.rs:9:23
   |
9  |   const _: [usize; 9] = {
   |  _______________________^
10 | |     konst::iter::collect_const!{usize => 0usize..10};
   | |                                                     - help: remove this semicolon to return this value
11 | | };
   | |_^ expected `[usize; 9]`, found `()`
